@@ -1,3 +1,8 @@
+2009-01-17  Neal H. Walfield  <neal@gnu.org>
+
+	* Makefile.am [ARCH_X86_64]: Compile with -fPIC.
+	(routines): Add strcpy.
+
 2008-12-12  Neal H. Walfield  <neal@gnu.org>
 
 	* addon/newlib/libc/sys/hurd/access.c: New file.
